<resources>
    <string name="app_name">Movies App</string>
    <string name="auth_failed">auth_failed</string>
    <string name="FINISH">Finish</string>
    <string name="NAME">name</string>
    <string name="EMAIL">EMail</string>
    <string name="PASSWORD">Password</string>


    <string name="log_out">log out</string>
    <string name="profile">Profile</string>
    <string name="searching">Searching</string>
    <string name="login">login</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="invalid_email">Please enter valid email</string>
    <string name="name">Name</string>
    <string name="INVALID_PASSWORD">Password must contain at least 8 digits</string>
    <string name="register">register</string>
    <string name="send">send</string>
    <string name="pleaseWait">please wait</string>
    <string name="actors">"Actors:  "</string>
    <string name="writer">"Writer:  "</string>
    <string name="director">Director:</string>
    <string name="close">Close</string>
    <string name="back">back</string>
    <string name="option">Option</string>
    <string name="backup">Backup</string>
    <string name="export_server">Export (server)</string>
    <string name="import_last_backup">Import (last backup)</string>
    <string name="settings">Settings</string>
    <string name="delete_all">Delete all</string>
    <string name="open_menu">Open menu</string>
    <string name="chat">Chat</string>
    <string name="search">search</string>
    <string name="star">star</string>
    <string name="favorite">Favorite</string>
    <string name="check_internet">Check your Internet connection</string>
    <string name="required">Required</string>
    <string name="insert_image">Please insert profile image</string>
    <string name="create_account_faild">create account failed</string>
    <string name="email_or_pass_incorect">Email or password is incorrect</string>
    <string name="validate_password">Validate password</string>
    <string name="insert_email_and_password">Insert Email And Password</string>
    <string name="continue_btn">Continue</string>
    <string name="register_successfully">Register Successfully</string>
    <string name="more_details">More Details</string>
    <string name="remember_me">Remember me</string>


</resources>

