<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_favorite"
        android:icon="@android:drawable/btn_star"
        android:title="@string/star"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_search"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/search"
        android:visible="false"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_Reminder_movies"
        android:icon="@android:drawable/sym_action_chat"
        android:title="@string/chat"
        android:visible="false"
        app:showAsAction="ifRoom" />

    <item
        android:icon="@drawable/ic_action_more2"
        android:title="@string/open_menu"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/action_user"
                android:title="@string/option" />
            <item android:title="@string/backup"
                android:icon="@android:drawable/ic_menu_save"
                android:id="@+id/action_backup"
                app:showAsAction="ifRoom">
                <menu>
                    <item
                        android:id="@+id/action_export"
                        android:icon="@android:drawable/arrow_up_float"
                        android:title="@string/export_server"
                        />
                    <item
                        android:id="@+id/action_import"
                        android:icon="@android:drawable/arrow_down_float"
                        android:title="@string/import_last_backup"
                        />
                </menu>
            </item>

            <item
                android:id="@+id/action_settings"
                android:enabled="false"
                android:icon="@android:drawable/ic_menu_preferences"
                android:title="@string/settings"
                app:showAsAction="ifRoom" />
            <item
                android:id="@+id/action_delete"
                android:icon="@android:drawable/ic_menu_delete"
                android:title="@string/delete_all"
                app:showAsAction="ifRoom" />

            <item
                android:id="@+id/action_logout"
                android:icon="@drawable/logout"
                android:title="@string/log_out"
                app:showAsAction="ifRoom" />
        </menu>
    </item>

</menu>