<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/lightBackground"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_sign_in"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="shiran.movies.authentication.SignInActivity">

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"

        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="70dp">

        <TextView
            android:id="@+id/register_messageControl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10sp"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:visibility="gone" />

        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10sp"
            card_view:cardCornerRadius="4dp"
            card_view:cardElevation="3dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:gravity="center"
                    android:text="@string/insert_email_and_password"
                    android:textColor="@color/colorPrimary"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="5dp"
                    android:background="#dddddd" />

                <EditText
                    android:id="@+id/register_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/edit_txt"
                    android:hint="@string/EMAIL"
                    android:inputType="textEmailAddress"
                    android:padding="7dp"
                    android:textSize="19sp" />

                <EditText
                    android:id="@+id/register_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/edit_txt"
                    android:hint="@string/PASSWORD"
                    android:inputType="textPassword"
                    android:padding="7dp"
                    android:textSize="19sp" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <CheckBox
            android:id="@+id/chk_remember_me"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/remember_me"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_marginTop="20dp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark"
            android:onClick="onClickToRegister"
            android:text="@string/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    </ScrollView>
    <Button
        android:id="@+id/btn_finish_sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@color/colorPrimaryDark"
        android:onClick="onClickFinish"
        android:padding="5dp"
        android:text="@string/FINISH"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:textStyle="bold"

         />

</RelativeLayout>
