<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightBackground"
    android:gravity="center_horizontal">


    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:background="@color/lightBackground"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingBottom="70dp">


            <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10sp"
                card_view:cardCornerRadius="4dp"
                card_view:cardElevation="3dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:gravity="center"
                        android:text="@string/insert_email_and_password"
                        android:textColor="@color/colorPrimary"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_margin="5dp"
                        android:background="#dddddd" />

                    <EditText
                        android:id="@+id/register_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:background="@drawable/edit_txt"
                        android:hint="@string/EMAIL"
                        android:inputType="textEmailAddress"
                        android:padding="7dp"
                        android:textSize="19sp" />

                    <EditText
                        android:id="@+id/register_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/edit_txt"
                        android:hint="@string/PASSWORD"
                        android:inputType="textPassword"
                        android:padding="7dp"
                        android:textSize="19sp" />

                    <EditText
                        android:id="@+id/register_valid_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/edit_txt"
                        android:hint="@string/validate_password"
                        android:inputType="textPassword"
                        android:padding="7dp"
                        android:textSize="19sp" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <TextView
                android:id="@+id/register_messageControl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10sp"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                android:visibility="gone" />

            <Button
                android:id="@+id/btn_continue_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@color/colorPrimaryDark"
                android:onClick="onClickContinue"
                android:text="@string/continue_btn"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/lbl_register_successfully"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/register_successfully"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"
                android:visibility="invisible" />


            // android:visibility="gone"

            <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/card_more_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10sp"
                android:visibility="gone"
                card_view:cardCornerRadius="4dp"
                card_view:cardElevation="3dp">

                <LinearLayout

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:gravity="center"
                        android:text="@string/more_details"
                        android:textColor="@color/colorPrimary"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/register_username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:background="@drawable/edit_txt"
                        android:digits="qwertyuiopasdfghjklzxcvbnmפםןוטארקףךלחיעכגדשזסבהנמצתץ1234567890"
                        android:hint="@string/NAME"
                        android:inputType="text"
                        android:padding="7dp"
                        android:textSize="19sp" />


                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_margin="5dp"
                        android:background="#dddddd" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <Button
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:background="@android:drawable/ic_menu_camera"
                            android:onClick="onClickCamera" />

                        <Button
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:background="@android:drawable/ic_menu_gallery"
                            android:onClick="onClickGallery" />
                    </LinearLayout>


                    <ImageView
                        android:id="@+id/img_face"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:padding="1dp" />


                </LinearLayout>
            </android.support.v7.widget.CardView>


        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/btn_finish_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@color/colorPrimaryDark"
        android:onClick="onClickFinish"
        android:padding="5dp"
        android:text="@string/FINISH"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        android:visibility="invisible" />
</RelativeLayout>